--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- INTRO -->
     <section class="header">
     <div class="container">
-        <!-- Navifation -->
+        <!-- Navigation -->
         <div class="nav">
             <a href="#" class="nav_item">home</a>
             <a href="#" class="nav_item">about</a>
@@ -31,7 +31,10 @@
         <!-- title -->
         <div class="title">
             <p class="title_text">Love Story Photography</p>
-            <p class="subtitle_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis magnam ipsam quidem, dolore vero quasi delectus voluptate, velit labore optio eos temporibus id quisquam inventore nemo nam? Sit, quo tempore?</p>
+            <p class="subtitle_text">Lorem ipsum dolor sit amet consectetur adipisicing 
+                elit. Perspiciatis magnam ipsam quidem, dolore vero quasi delectus 
+                voluptate, velit labore optio eos temporibus id quisquam inventore 
+                nemo nam? Sit, quo tempore?</p>
         </div>
 
         <div class="slider">
@@ -43,24 +46,210 @@
     </section>
 
     <!-- about me -->
-    <section class="about">
-        <div class="container">
-            <div class="about__img">
+    <section class="About_Me">
+    <div class="container">
+        <div class="about_me_content">
 
+            <div class="about__img">
+                <img src="/img/YOUR_IMAGES_HERE__Right_click__Edit_Content.png" alt="">
             </div>
 
             <div class="about__text">
-                <p class="about__text__title">
-
+                <p class="about__text__title">About me</p>
+                <p class="about__text_text">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia 
+                fugiat commodi exercitationem ea unde necessitatibus quia 
+                reprehenderit nesciunt? Ipsa ipsam corporis nisi quod hic quas 
+                velit suscipit cum nihil dolorem!
                 </p>
-
-                <p class="about__text_tetx">
-
-                </p>
-
-                <button class="about__text_button"></button>
+                <button class="about__text_button">GET TO KNOW ME BETTER</button>
             </div>
         </div>
+    </div>
+    </section>
+
+    <!-- Portfolio -->
+    <section class="portfolio">
+    <div class="container">
+        <div class="portfolio_content_title">Portfolio</div>
+        <div>   <p class="porfolio_content_subtitle">The Best of 2020</p>   </div>
+        <div class="portfolio_text">After wedding, Engagement, Love Story, Wedding</div>
+        <button class="portfolio_content_but">MORE photos</button>
+    </div>
+    </section>
+
+    <!-- PORTFOLIO FOTO -->
+    <section class="portfolio_foto">
+    <div class="container">
+        <div class="prf_foto_content">
+                <!-- FERST COLLUM -->
+            <div class="prf_content_collum">
+                <div class="prf_collum_item_big">
+                    <img src="/img/Pf_img1.png" alt="" class="prf_item_img">
+                </div>
+                <div class="prf_collum_item_big">
+                    <img src="/img/Pf_img2.png" alt="" cass="prf_item_img">
+                </div>
+            </div>
+                <!-- SECOND COLLUM -->
+            <div class="prf_content_collum">
+                <div class="prf_collum_item_smal">
+                    <img src="/img/Pf_img3.png" alt="" cass="prf_item_img">
+                </div>
+                <div class="prf_collum_item_big">
+                    <img src="/img/Pf_img4.png" alt="" cass="prf_item_img">
+                </div>
+                <div class="prf_collum_item_smal">
+                    <img src="/img/Pf_img5.png" alt="" cass="prf_item_img">
+                </div>
+            </div>
+                <!-- THIRD COLLUM  -->
+            <div class="prf_content_collum">
+                <div class="prf_collum_item_big">
+                    <img src="/img/Pf_img6.png" alt="" cass="prf_item_img">
+                </div>
+                <div class="prf_collum_item_big">
+                    <img src="/img/Pf_img7.png" alt="" cass="prf_item_img">
+                </div>
+            </div>
+        </div>
+
+        <div class="slider_prf">
+            <div class="dote"></div>
+            <div class="dote"></div>
+            <div class="dote"></div>
+        </div>
+    </div>
+    </section>
+
+    <!-- VIDEO -->
+    <section class="video">
+        <!-- HEADER -->
+        <div class="video_header">
+            <div class="container">
+                <p class="video_title">video</p> 
+                <div class="video_subtitle">Lorem ipsum dolor sit amet consectetur adipisicing 
+                    elit. Nesciunt dolores corrupti excepturi fuga? Cupiditate quasi sed </div>
+            </div>
+        </div>
+        <!-- CONTENT VIDEO -->
+        <div class="container">
+            <div class="video_content">
+                <iframe src="https://www.youtube.com/embed/OXuIqaeg0SI" frameborder="0" 
+                allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen
+                class="main_video"></iframe>
+                <p class="video_text"> Lorem ipsum dolor sit, amet consectetur adipisicing 
+                    elit. Ut laboriosam dolores expedita in accusamus ex ducimus labore
+                    assumenda, animi blanditiis amet quidem natus minus nesciunt laborum 
+                    incidunt, optio esse excepturi fuga? Cupiditate quasi sed velit!</p>
+
+                <!-- SMALL VIDEO -->
+                <div class="small_video">
+                    <!-- FERST VIDEO -->
+                    <div class="small_video_item"> 
+                        <div class="item_video_header">
+                            <img src="/img/small_video1.png" alt="" class="img_video_header">
+                            <p class="item_video_text">Lorem ipsum dolor sit, amet 
+                                consectetur adipisicing</p>
+                        </div>
+                    </div>
+                    <!-- SECOND VIDEO -->
+                    <div class="small_video_item">
+                        <div class="item_video_header">
+                            <img src="/img/small_video2.png" alt="" class="img_video_header">
+                            <p class="item_video_text">Lorem ipsum dolor sit, amet 
+                                consectetur adipisicing</p>
+                        </div>
+                    </div>   
+                    <!-- THIRD VIDEO  -->
+                    <div class="small_video_item">
+                        <div class="item_video_header">
+                            <img src="/img/small_video3.png" alt="" class="img_video_header">
+                            <p class="item_video_text">Lorem ipsum dolor sit, amet 
+                                consectetur adipisicing</p>
+                        </div>
+                    </div>
+                </div>
+                    <!-- BUTTON VIDEO -->
+                <button class="video_but">MORE videos</button>
+            </div>
+        </div>  
+    </section>
+
+    <!-- testimonials -->
+    <section class="testimonials">
+    <div class="container">
+        <div class="tetmon_title">The Testimonials </div>
+        <div class="tetmon_subtitle">WHAT THEY SAY</div>
+        <!-- COUPLE -->
+        <div class="tetmon_couple">
+             <!-- FERST COULPE -->
+            <div class="tetmon_couple_item">
+                <div>   <img src="/img/couple_piple1.png" alt="" class="counle_item_img">   </div>
+                <div class="tetmon_couple_item_content">
+                    <p class="couple_item_title">Cassandra & Andreas</p>
+                    <p class="couple_item_text">Lorem ipsum dolor sit amet consectetur adipisicing 
+                    elit. Voluptas, sint nisi, doloribus sapiente quis numquam ullam assumenda 
+                    est unde dolorum, iste dolorem ut repudiandae inventore. Sed ratione 
+                    itaque ipsam id.</p>
+                </div>
+            </div>
+            <!-- SECOND COUPLE -->
+            <div class="tetmon_couple_item">
+                <div>   <img src="/img/couple_piple2.png" alt="" class="counle_item_img">   </div>
+                <div class="tetmon_couple_item_content">
+                    <p class="couple_item_title">Aleksandra & Max</p>
+                    <p class="couple_item_text">Lorem, ipsum dolor sit amet consectetur adipisicing 
+                        elit. Magnam possimus nam eveniet quae expedita cumque et minus fuga id 
+                        doloribus impedit iure, consectetur laboriosam dolorum soluta natus 
+                        itaque eaque debitis?</p>
+                </div>
+            </div>
+            <!-- THIRD COULPE -->
+            <div class="tetmon_couple_item">
+                <div>   <img src="/img/couple_piple3.png" alt="" class="counle_item_img">   </div>
+                <div class="tetmon_couple_item_content">
+                    <p class="couple_item_title">Angela & Jack</p>
+                    <p class="couple_item_text">Lorem ipsum dolor sit amet consectetur adipisicing 
+                        elit. Deleniti qui amet, sapiente officia excepturi perferendis repudiandae 
+                        dignissimos tenetur molestiae! Quis soluta neque suscipit quo atque earum 
+                        illum temporibus blanditiis reiciendis.</p>
+                </div>
+            </div>
+        </div>
+        <!-- BUTTON  -->
+        <button class="tetmon_but">Read more</button>
+    </div>
+    </section> 
+    
+    <!-- CONTACT -->
+    <section class="contact">
+    <div class="container">
+            <!-- TITLE -->
+        <p class="contact_title">Contact me</p>
+            <!-- Subtitle -->
+        <div class="contact_subtitle">GET IN TOUCH</div>
+            <!-- collom, Form+img -->
+        <div class="contact_content">
+            <!-- first collom -->
+            <div class="content_form">
+                <p class="contact_form_text">Lorem ipsum dolor sit amet consectetur adipisicing 
+                    elit. Expedita nam sunt culpa temporibus, incidunt deserunt dolorum ad 
+                    similique, consequuntur velit magnam fuga at atque, molestiae doloribus 
+                    saepe eveniet iste tempora!</p>
+                <form action="">
+                    <p class="contact_form_title"> Name</p>
+                    <textarea name="text"></textarea> 
+                    <p class="contact_form_title"> subject</p>
+                    <textarea name="comment"></textarea> 
+                    <p class="contact_form_title"> subject  </p>
+                    <textarea name="comment"></textarea> 
+                </form>
+            </div>
+            <!-- second collom -->
+            <div class="contact_foto">  <img src="/img/contact_img.png" alt="" class="contact_img"></div>
+        </div>
+    </div>    
     </section>
 </body>
 </html>
