--- a/index.html
+++ b/index.html
@@ -234,22 +234,44 @@
             <!-- first collom -->
             <div class="content_form">
                 <p class="contact_form_text">Lorem ipsum dolor sit amet consectetur adipisicing 
-                    elit. Expedita nam sunt culpa temporibus, incidunt deserunt dolorum ad 
-                    similique, consequuntur velit magnam fuga at atque, molestiae doloribus 
-                    saepe eveniet iste tempora!</p>
+                    elit. Expedita nam sunt culpa temporibus, incidunt deserunt dolorum</p>
                 <form action="">
                     <p class="contact_form_title"> Name</p>
-                    <textarea name="text"></textarea> 
-                    <p class="contact_form_title"> subject</p>
-                    <textarea name="comment"></textarea> 
+                    <input type="text" class="small_form">
+                    <p class="contact_form_title"> subject </p>
+                    <input type="text" class="small_form">
                     <p class="contact_form_title"> subject  </p>
-                    <textarea name="comment"></textarea> 
+                    <input type="text" class="big_form">
                 </form>
             </div>
             <!-- second collom -->
             <div class="contact_foto">  <img src="/img/contact_img.png" alt="" class="contact_img"></div>
         </div>
     </div>    
+    </section>
+
+    <!-- Footer -->
+    <section class="footer">
+    <div class="container">
+        <div class="nav nav_footer">
+            <a href="#" class="nav_item">home</a>
+            <a href="#" class="nav_item">about</a>
+            <a href="#" class="nav_item">portfolio</a>
+            <a href="#" class="nav_item">blog</a>
+            <a href="#" class="nav_item">video</a>
+            <a href="#" class="nav_item">testimonials</a>
+            <a href="#" class="nav_item">contact</a>
+            <img src="img/serch.png" alt="">
+        </div>
+        <div class="social">
+            <img src="/img/icon_facebook.png" alt="" class="social_img">
+        </div>
+        <p class="tetx_foter">
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempore asperiores, <br> autem quisquam 
+            harum voluptas ab, vel, facilis id accusantium odio esse magni <br> voluptatibus laborum ducimus 
+            tempora necessitatibus sed veritatis nostrum.
+        </p>
+    </div>
     </section>
 </body>
 </html>
