adaptiv burger menu

--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="style/media.css">
     <title>Flowers</title>
 </head>
 <body>
+
     <!-- INTRO -->
     <section class="header">
     <div class="container">
@@ -21,6 +23,17 @@
             <a href="#" class="nav_item">contact</a>
             <img src="img/serch.png" alt="">
         </div>
+
+ <!--   Burger menu -->
+        <section class="burger">
+            <div class="circle_burger">
+                <div class="Burger_linear">
+                    <div class="linear item_1"></div>  
+                    <div class="linear item_3"></div>  
+                    <div class="linear item_2"></div> 
+                </div> 
+            </div>
+        </section>
 
         <!-- logo -->
         <div class="logo">
